[package]
name = "api"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
async-trait = "0.1.42"
bytes = { version = "1", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4"
parking_lot = "0.11.1"
regex = "1.4.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.23"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }


