[package]
name = "broker"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
lapin = "1.6.6"
log = "0.4"
parking_lot = "0.11.1"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-amqp = "0.1.3"
tokio-stream = "0.1"
async-stream = "0.3.0"
