[package]
name = "scheduler"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broker = { path = "../broker" }
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-stream = "0.1"
