[package]
name = "scheduler"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broker = { path = "../broker" }
csv = "1.1"
log = "0.4"
parking_lot = "0.11.1"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tokio-stream = "0.1"
